2004-06-22 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Change to version 17

	* src/include/ngspice.h:
	include <errno.h> for Tcl version of perror

	* src/main.c:
	Add dummy INPretrieve() symbol so ngnutmeg and co link with xspice enabled

2004-06-22 Adrian Dawe <adrian.dawe@multigig.com>

	* src/pkgIndex.tcl.in  src/spicepp.pl  src/spicepp.tcl  src/spicewish 
	src/Makefile.am:
	Added spicepp integration and spicewish command line options.

2004-06-10 Stefan Jones <stefan.jones@multigig.com>

	* include/ngspice.h:
	Print perror to the Tk console
	
	* src/tclspice.c:
	test for FILE in tcl_printf being stdout/stderr
	Could be more than one fd for stdout/stderr
	
	* src/tclspice.c:
	Do not join worker thread when using TCL_Threads as it causes
	lockups on W32

2004-06-04 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	Cleaned up thread code so can use Tcl_Threads instead on W32
	
	* src/tclspice.c:
	Do not register more than one identical trigger
	Return voltage triggered at also
	Add name tag (optional) for all triggers
	
2004-06-02 Adrian Dawe <adrian.dawe@multigig.com>

	* src/frontend/com_dl.c src/frontend/com_dl.c src/frontend/commands.c:
	Add function xaltermod

2004-06-02 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Change to version 16
	Disable GnuReadline in tclspice
	
	* src/tclspice.c:
	Added trigger and step callbacks
	Fix redef of sighandler_t

	* src/pkgIndex.tcl.in:
	set a global variable spice_version

2004-05-26 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c src/include/ngspice.h src/misc/tilde.c
	src/spicelib/devices/dev.c src/xspice/ipc/ipcsockets.c:
	Fixup for compiling under mingw

2004-05-21 Stefan Jones <stefan.jones@multigig.com>

	* src/frontend/terminal.c:
	Fix buffer overflow in out_printf

2004-05-19 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	Made the trigger time more exact

2004-05-03 Stefan Jones <stefan.jones@multigig.com>

	* src/spicelib/analysis/acan.c: