@@ -7,13 +7,20 @@
 	include <errno.h> for Tcl version of perror
 
 	* src/main.c:
-	Add dummy INPretrieve() symbol so ngnutmeg and co link with xspice enabled
+	Add dummy INPretrieve() symbol so ngnutmeg and co link with 
+	xspice enabled.
+
+	* src/measure_spice.pl src/spicepp.pl.in Makefile.am:
+	Add .measure statement support
 
 2004-06-22 Adrian Dawe <adrian.dawe@multigig.com>
 
 	* src/pkgIndex.tcl.in  src/spicepp.pl  src/spicepp.tcl  src/spicewish 
 	src/Makefile.am:
 	Added spicepp integration and spicewish command line options.
+
+	* src/spicewish:
+	Added -cm switch to load a codemodel
 
 2004-06-10 Stefan Jones <stefan.jones@multigig.com>
 
